--- a/_posts/2014/2014-09-15-likunran.md
+++ b/_posts/2014/2014-09-15-likunran.md
@@ -1,11 +1,13 @@
 ---
-layout:post
-titile:记录开始
-categories：
-－Other
+layout: post
+title: 要开工了
+categories:
+- Other
 tags:
--Other
+- Other
 ---
+
 
 ##纪念将工作四年 用博客总结和学习
 没有想博客都名字 没有想好写什么
+----
